--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
+        <div class="container-fluid_h1"><h1>Study Plan Tool</h1></div>
         <div class="navbar">
-            Study Plan Tool:
-            <a href="{{ url_for('home') }}">Home</a>
-            <a href="{{ url_for('create') }}">Create Plan</a>
-            <a href="{{ url_for('view') }}">View Plan</a>
-            <a href="{{ url_for('compare') }}">Compare Plan</a>
+            <div class="navbox"><a href="{{ url_for('home') }}">Home</a></div>
+            <div class="navbox"><a href="{{ url_for('create') }}">Create Plan</a></div>
+            <div class="navbox"><a href="{{ url_for('view') }}">View Plan</a></div>
+            <div class="navbox"><a href="{{ url_for('compare') }}">Compare Plan</a></div>
             <!-- Add inbox here??? -->
         </div>
         {% block content %}{% endblock %}
