I have included About and Purpose section for the index.html(Home) page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,14 @@
     <!-- Work In Progress -->
     <h1>Welcome to the Study Plan Tool</h1>
     <p>This is a tool to help you create and manage your study plans.</p>
-    <p><a href="{{ url_for('login') }}">Login</a> 
-        <a href="{{ url_for('signup') }}">Register</a></p>
+    <div id = "About">
+        <h1><b>About</b></h1>
+        <p>The study plan application has been designed to generate a suitable study plan for students, where their  -->
+            study schedule can be organised ... </p>
+    </div>
+    <div id = "Purpose">
+        <h1><b>Purpose</b></h1>
+        <p> The purpose of this application is to help students manage their study time effectively and efficiently ... </p>
+    </div>
+    
 {% endblock %}
