--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,17 +5,57 @@
         {% else %}
         <title>Study Plan Tool</title>
         {% endif %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
     </head>
     <body>
-        <div class="navbar">
-            Study Plan Tool:
-            <a href="{{ url_for('home') }}">Home</a>
-            <a href="{{ url_for('create') }}">Create Plan</a>
-            <a href="{{ url_for('view') }}">View Plan</a>
-            <a href="{{ url_for('compare') }}">Compare Plan</a>
-            <!-- Add inbox here??? -->
-        </div>
+        <div class="row">
+            <div class="col">
+                <nav class="navbar navbar-expand-lg"> 
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mb-2 mb-lg-0 me-auto">
+                                <li class="nav-item m-2"><a class="nav-link" aria-current="home" href="{{ url_for('home') }}">Home</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('create') }}">Create Plan</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('view') }}">View Plan</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('compare') }}">Compare Plan</a></li>
+                            </ul>
+
+                            {% if show_auth_links %}
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li><a class = "nav-link" href="{{ url_for('login') }}"><i class="bi bi-box-arrow-in-right"></i>Login</a></li>
+                                <li><a class = "nav-link" href="{{ url_for('signup') }}"><i class="bi bi-person"></i>Register</a></li>
+                            </ul>
+                            {% endif %}
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div> 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="container mt-3">
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}{% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     </body>
 </html>
