--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,32 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Sign Up</h1>
-    <form action="" method="POST" novalidate>
-        {{ form.hidden_tag() }}
+<div class="auth-form-container">
+    <div class="auth-form-card">
+        <h1 class="auth-form-title">Sign Up</h1>
+        <form class="auth-form" action="" method="POST" novalidate>
+            {{ form.hidden_tag() }}
 
-        {{ form.username.label(class = "form-label") }}
-        {{ form.username(class = "form-control")}}
-        {% for error in form.username.errors %}
-            <div class="text-danger">{{ error }}</div>
-        {% endfor %}
+            <div class="form-group">
+                {{ form.username.label(class="form-label") }}
+                {{ form.username(class="form-control") }}
+                {% for error in form.username.errors %}
+                    <div class="error-message text-danger">{{ error }}</div>
+                {% endfor %}
+            </div>
 
-        {{ form.password.label(class = "form-label") }}
-        {{ form.password(class = "form-control") }}
-        {% for error in form.password.errors %}
-            {% if error != 'invalid_password_complexity' %}
-                <div class="text-danger">{{ error }}</div>
-            {% endif %}
-        {% endfor %}
+            <div class="form-group">
+                {{ form.password.label(class="form-label") }}
+                {{ form.password(class="form-control") }}
+                {% for error in form.password.errors %}
+                    {% if error != 'invalid_password_complexity' %}
+                        <div class="error-message text-danger">{{ error }}</div>
+                    {% endif %}
+                {% endfor %}
+            </div>
 
-        {{ form.confirm_password.label(class = "form-label") }}
-        {{ form.confirm_password(class = "form-control") }}
-        {% for error in form.confirm_password.errors %}
-            <div class="text-danger">{{ error }}</div>
-        {% endfor %}
+            <div class="form-group">
+                {{ form.confirm_password.label(class="form-label") }}
+                {{ form.confirm_password(class="form-control") }}
+                {% for error in form.confirm_password.errors %}
+                    <div class="error-message text-danger">{{ error }}</div>
+                {% endfor %}
+            </div>
 
-        {{ form.submit(class="btn btn-info") }}
-    </form>
-
-
+            <div class="form-group">
+                {{ form.submit(class="btn btn-submit") }}
+                <div class="text-center mt-3">
+                    <a href="{{ url_for('login') }}" class="account-link">Already have an account?</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
