redownloaded the login.html file I deleted in the latest push from the commit e14c5cc33a4e62fa72ca233c31e8661bccd77b90, I have also added a toggle on the main page in the nav bar that will allow users to switch from light to dark mode themes and have aligned the header on the home page with all other elements

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,10 @@
 
 {% block content %}
     <!-- Work In Progress -->
-    <h1>Welcome to the Study Plan Tool</h1>
-    <p>This is a tool to help you create and manage your study plans.</p>
+    <div id = "Header">
+        <h1><b>Welcome to the Study Plan Tool</b></h1>
+        <p>This is a tool to help you create and manage your study plans.</p>
+    </div>
     <div id = "About">
         <h1><b>About</b></h1>
         <p>The study plan application has been designed to generate a suitable study plan for students, where their  -->
