--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,16 @@
                             </ul>
 
                             {% if show_auth_links %}
-                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
+                                <li class="nav-item mx-2">
+                                    <div class="theme-switch-wrapper">
+                                        <input type="checkbox" id="theme-toggle" />
+                                        <label for="theme-toggle" class="theme-switch">
+                                            <span class="icon moon"><i class="bi bi-moon-fill"></i></span>
+                                            <span class="icon sun"><i class="bi bi-sun-fill"></i></span>
+                                        </label>
+                                    </div>
+                                </li>
                                 <li><a class = "nav-link" href="{{ url_for('login') }}"><i class="bi bi-box-arrow-in-right"></i>Login</a></li>
                                 <li><a class = "nav-link" href="{{ url_for('signup') }}"><i class="bi bi-person"></i>Register</a></li>
                             </ul>
@@ -59,5 +68,17 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        
+        <script>
+            const toggleSwitch = document.getElementById('theme-toggle');
+        
+            toggleSwitch.addEventListener('change', () => {
+                if (toggleSwitch.checked) {
+                    document.body.classList.add('dark-mode');
+                } else {
+                    document.body.classList.remove('dark-mode');
+                }
+            });
+        </script>        
     </body>
 </html>
