--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,9 +9,11 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='accounts_log.css') }}">
+        {% block head_scripts %}{% endblock %}
 
     </head>
     <body>
@@ -71,8 +73,11 @@
                 </div>
             {% endif %}
         {% endwith %}
-
-        {% block content %}{% endblock %}
+        
+        <div class="container mt-3">
+            {% block content %}{% endblock %}
+        </div>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
