Modified so instead of changing colours based on list, change toggle mode of event buttons in timetable.css

--- a/app/static/timetable.css
+++ b/app/static/timetable.css
@@ -25,14 +25,6 @@
     height: 20px;
 }
 
-.timeslot.selected {
-    background-color: grey;
-}
-
-.timeslot.pselected {
-    background-color: lightblue;
-}
-
 .timeslot:hover {
     border: 3px dotted black; 
 }
@@ -86,6 +78,56 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.event-toggle-1 {
+    background-color: red;
+    color: white;
+}
+
+.event-toggle-2 {
+    background-color: blue;
+    color: white;
+}
+
+.event-toggle-3 {
+    background-color: green;
+    color: white;
+}
+
+.event-toggle-4 {
+    background-color: yellow;
+    color: black; /* Ensure text is readable on yellow */
+}
+
+.event-toggle-5 {
+    background-color: purple;
+    color: white;
+}
+
+.event-toggle-6 {
+    background-color: orange;
+    color: white;
+}
+
+.event-toggle-7 {
+    background-color: pink;
+    color: black; /* Ensure text is readable on pink */
+}
+
+.event-toggle-8 {
+    background-color: brown;
+    color: white;
+}
+
+.event-toggle-9 {
+    background-color: cyan;
+    color: black; /* Ensure text is readable on cyan */
+}
+
+.event-toggle-10 {
+    background-color: lime;
+    color: black; /* Ensure text is readable on lime */
 }
 
 .event button {
