--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,7 @@
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('create') }}">Create Plan</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('view') }}">View Plan</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('compare') }}">Compare Plan</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('analytics') }}">Analytics</a></li>
                             </ul>
 
                             {% if session.username %}
