Modified database schema. Modified database updates. Attempt at availability setting. Attempt at displaying multiple timetables at once. Attempt at displaying other timetables as gray.

--- a/app/static/timetable.css
+++ b/app/static/timetable.css
@@ -17,35 +17,25 @@
     border: 1px solid black;
 }
 
-.timeslot {
-    width: 10%;
-    background-color: #fff;
-    transition: background-color 0.3s;
-    border: 1px solid black;
-    height: 20px;
-}
-
-.timeslot.selected {
-    background-color: grey;
-}
-
-.timeslot.pselected {
-    background-color: lightblue;
-}
-
-.timeslot:hover {
-    border: 3px dotted black; /* Change border to dotted on hover */
-}
-
 .toggle {
-    background-color:gray;
-    color: black;
-    border: 1px solid black;
+  margin: 5px;
+  border: 1px solid #ccc;
+  background-color: #f8f9fa;
+  cursor: pointer;
+  border-radius: 5px;
+  height: 20px;
 }
-
+  
 .toggle.active {
-    background-color: lightgreen;
-    border: 1px solid green;
+  background-color: #28a745; /* Green highlight */
+  color: white;
+  border-color: #28a745;
+}
+  
+.toggle-container {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .activity-box {
@@ -115,14 +105,6 @@
     cursor: pointer; /* Add cursor pointer to indicate it's clickable */
 }
 
-.timeslot.selected {
-    background-color: grey;
-}
-
-.timeslot.pselected {
-    background-color: lightblue;
-}
-
 .timeslot:hover {
     border: 3px dotted black;
 }
@@ -130,3 +112,4 @@
 .timeslot:active {
     background-color: lightgray; /* Color change on cell click */
 }
+
