--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -10,18 +10,23 @@
 <div class="row">
   {% include 'timetable.html' %}
   <div class="col-md-4">
-    <button class="toggle" id="toggle-selected">Fully Unavailable</button>
+    <div class="toggle-container">
+      <button class="toggle" id="toggle-selected">Fully Unavailable</button>
+      <button class="toggle" id="toggle-pselected">Partially Unavailable</button>
+    </div>
     
-    <button class="toggle" id="toggle-pselected">Partially Unavailable</button>
-
     <form>
       <div class="assessment-form">
         <label for="assessment-name">Assessment Name</label>
         <input type="text" id="name" name="name" class="form-control" placeholder="Enter assessment name" required>
       </div>
       <div class="assessment-form">
-        <label for="assessment-date">Due Date</label>
-        <input type="date" id="date" name="date" class="form-control" required>
+        <label for="assessment-date">Weighting</label>
+        <input type="number" id="weight" name="weight" class="form-control" required>
+      </div>
+      <div class="assessment-form">
+        <label for="assessment-date">Mark</label>
+        <input type="number" id="mark" name="mark" class="form-control" required>
       </div>
       <button type="submit">Submit</button>
     </form>
