--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -27,8 +27,14 @@
     </form>
 
     <div id="activity-container">
-        <!-- New activities will be added here -->
-        <button id="add-button">+</button>
+      <!-- Activity type selector -->
+      <label for="activity-type-selector" class="mt-2">Activity Type</label>
+      <select id="activity-type-selector" class="form-select mb-2">
+        <option value="normal">Normal</option>
+        <option value="unit">Unit</option>
+      </select>
+      <!-- New activities will be added here -->
+       <button id="add-button">+</button>
     </div>
     <button id="save-timetable" class="btn btn-primary mt-3">Save Timetable</button>
 
@@ -38,7 +44,7 @@
 <!-- Pass user activities data to JavaScript -->
 {% if user_activities %}
 <script>
-  window.userSavedActivities = {{ user_activities|tojson }};
+  window.userSavedActivities = {{ user_activities|tojson|safe }};
 </script>
 {% else %}
 <script>
