--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -11,8 +11,8 @@
   {% include 'timetable.html' %}
   <div class="col-md-4">
     <div class="toggle-container">
-      <button class="toggle" id="toggle-selected">Fully Unavailable</button>
-      <button class="toggle" id="toggle-pselected">Partially Unavailable</button>
+      <button class="toggle" id="toggle-Available">Fully Available</button>
+      <button class="toggle" id="toggle-pAvailable">Partially Available</button>
     </div>
     
     <form>
