--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
                                 <li class="nav-item m-2"><a class="nav-link" aria-current="home" href="{{ url_for('home') }}">Home</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('create') }}">Create Plan</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('view') }}">View Plan</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('assessments') }}">Assessments</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('compare') }}">Compare Plan</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('analytics') }}">Analytics</a></li>
                             </ul>
