--- a/app/templates/assessments.html
+++ b/app/templates/assessments.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head_scripts %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="{{ url_for('static', filename='assessment.js')}}"></script>
+{% endblock %}
+
 {% block content %}
     <div class = "container">
         <h1>Assessment Entry</h1>
