--- a/app/templates/assessments.html
+++ b/app/templates/assessments.html
@@ -17,9 +17,12 @@
             </select>
         </div>
         <div id="assessmentsContainer" class="mt-3"></div>
-        <button class="add-btn btn btn-primary mt-3" onclick="addAssessment()"><i class="fa-solid fa plus">
-        </i>Add Assessment</button>
+        <!--<button class="add-btn btn btn-primary mt-3" onclick="addAssessment()"><i class="fa-solid fa-plus">
+        </i>Add Assessment</button>-->
         <div class="summary mt-4" id="summary"></div>
         <button class="btn btn-success mt-3" onclick="saveAssessments()">Save all</button>
     </div>
+    <script>
+        window.savedAssessments = {{ saved_assessments | tojson }};
+      </script>
 {% endblock %}
