--- a/app/static/assessment.css
+++ b/app/static/assessment.css
@@ -228,3 +228,9 @@ select:focus, input[type="text"]:focus, input[type="number"]:focus {
   visibility: visible;
   opacity: 1;
 }
+.dragging {
+  opacity: 0.5;
+}
+.drag-over {
+  background-color: #eaf1fb;
+}
