this seperates the code so that timetable.js only has code that is shared between the two pages compare and create and now both those pages have dedicated js files

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -2,6 +2,7 @@
 
 {% block head_scripts %}
   <script src="{{ url_for('static', filename='timetable.js') }}"></script>
+  <script src="{{ url_for('static', filename='create.js') }}"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='timetable.css') }}">
 {% endblock %}
 
