--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -11,9 +11,9 @@
 <div class="row">
   {% include 'timetable.html' %}
   <div class="col-md-4">
-    <button class="toggle" id="toggle-selected">Fully Unavailable</button>
+    <button class="toggle" id="toggle-Available">Fully Available</button>
     
-    <button class="toggle" id="toggle-pselected">Partially Unavailable</button>
+    <button class="toggle" id="toggle-pAvailable">Partially Available</button>
 
     <div id="activity-container">
       <!-- New activities will be added here -->
